Bug 157990 - REGRESSION(r201263?) LayoutTest mathml/wbr-in-mroot-crash.html timing out on mac-wk2 release
Summary: REGRESSION(r201263?) LayoutTest mathml/wbr-in-mroot-crash.html timing out on ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alexey Proskuryakov
URL:
Keywords:
: 158133 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-23 10:27 PDT by Ryan Haddad
Modified: 2016-08-23 09:39 PDT (History)
2 users (show)

See Also:


Attachments
proposed fix (3.29 KB, patch)
2016-06-02 13:42 PDT, Alexey Proskuryakov
darin: review+
commit-queue: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Haddad 2016-05-23 10:27:18 PDT
LayoutTest mathml/wbr-in-mroot-crash.html timing out on mac-wk2 release

<https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r201288%20(6249)/results.html>
<http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=mathml%2Fwbr-in-mroot-crash.html>

stderr output:
TestController::resetStateToConsistentValues failed
#PROCESS UNRESPONSIVE - com.apple.WebKit.WebContent.Development (pid 1590)
Comment 1 Alexey Proskuryakov 2016-05-23 13:12:41 PDT
Previously, we didn't report a failure to reset the state to consistent values, and just silently relaunched the process.

Quite surprising that this happens on this particular test.
Comment 2 Ryan Haddad 2016-05-23 17:22:09 PDT
I have not been able to report this timeout locally. Marked test as a timeout on mac release in r201306
Comment 3 Ryan Haddad 2016-05-24 12:55:59 PDT
Marked as flaky on ios-simulator-wk2 release in <https://trac.webkit.org/r201344>

I am still working to reproduce this timeout locally.
Comment 4 Alexey Proskuryakov 2016-06-01 15:35:52 PDT
I can hit this on a debug build when running tests like this:

run-webkit-tests mathml/very-large-stretchy-operators.html mathml/wbr-in-mroot-crash.html --iter 100 --debug-rwt-logging
Comment 5 Alexey Proskuryakov 2016-06-01 15:42:34 PDT
Unsurprisingly, WebContent process is busy painting the previous test.
Comment 6 Alexey Proskuryakov 2016-06-02 13:39:03 PDT
*** Bug 158133 has been marked as a duplicate of this bug. ***
Comment 7 Alexey Proskuryakov 2016-06-02 13:42:32 PDT
Created attachment 280360 [details]
proposed fix
Comment 8 WebKit Commit Bot 2016-06-03 19:56:13 PDT
Comment on attachment 280360 [details]
proposed fix

Rejecting attachment 280360 [details] from commit-queue.

Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 280360, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit

Last 500 characters of output:
ebKitTestRunner/TestInvocation.cpp
patching file LayoutTests/ChangeLog
Hunk #1 succeeded at 1 with fuzz 3.
patching file LayoutTests/platform/mac-wk2/TestExpectations
Hunk #1 FAILED at 465.
1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/mac-wk2/TestExpectations.rej
patching file LayoutTests/platform/mac/TestExpectations

Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Darin Adler']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit

Full output: http://webkit-queues.webkit.org/results/1431739
Comment 9 Alexey Proskuryakov 2016-06-04 12:10:11 PDT
Committed http://trac.webkit.org/r201682