REGRESSION (r201263): Some tests have become flaky timeouts. https://bugs.webkit.org/show_bug.cgi?id=157990

Reviewed by Darin Adler.

Tools:

* WebKitTestRunner/TestInvocation.cpp: (WTR::TestInvocation::invoke):
It is somewhat legitimate for WebContent to not respond to messages after the test
is done; it can be e.g. re-doing a costly repaint. So, we should restart is silently,
without making the current test fail.

LayoutTests:

* platform/mac-wk2/TestExpectations:
* platform/mac/TestExpectations:



Canonical link: https://commits.webkit.org/176468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201682 268f45cc-cd09-0410-ab3c-d52691b4dbfc